package edu.fiuba.algo3.modelo.objetos;

public interface ObjetoRobado {
    boolean es(String nombre);
    int obtenerCantidadCiudadesEscape();
    String nombre();
}
